<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dimen_40dp"
    android:paddingRight="@dimen/dimen_40dp"
    tools:context=".activity.LoginActivity">

    <EditText
        android:id="@+id/txt_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:hint="@string/user_name"
        android:visibility="visible"
        android:inputType="text" />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_user_name"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:paddingLeft="@dimen/dimen_10dp"
        android:paddingRight="@dimen/dimen_10dp"
        android:text="@string/login" />

</RelativeLayout>
